tests/ui/codegen/evm-ir/validation/parse_empty_metadata.evmir
@module EmptyMetadata

/// Block docs.
bb0:
  push 1
  add !meta(foo= ) //~ ERROR: expected metadata value
